# srajob2

./: .env.example  .gitattributes  .gitignore  .green  AGENTS.md  CODE_IMPROVEMENTS.md  README.md  SCRIPTS.md  coverage.xml  instructions.md  mise.toml  netflix_goal.md  netlify.toml  pyproject.toml  pyrightconfig.json  sample-crawl-response.json  sample-curl.py  start_worker.ps1  testResults.xml  tmp.txt  uv.toml
.mise-tasks/: cfix.sh  delete_jobs_from_time.sh  delete_skipped_jobs_for_company.sh  fixex.sh  fixjobls.sh  prodfresh.sh  site_add.sh  wipe_site.sh
agent_scripts/: README.md  build_location_dictionary.py  clear_ignored_and_rescrape.py  compare_netflix_seen_live.py  debug_adobe_content_refine.py  debug_spidercloud_extraction.py  debug_spidercloud_post.py  delete_jobs_from_time.py  delete_sites_by_url.py  delete_skipped_jobs_for_company.py  diagnose_ignored_job.py  diagnose_spidercloud_stalls.py  dump_spidercloud_response.py  export_avature_fixture.py  export_company_jobs_fixture.py  export_company_salary_caps.py  export_convex_queue_state_fixture.py  export_scrape_queue_fixture.py  export_site_schedules.py  fetch_adobe_phenom_fixtures.py  fetch_bloomberg_avature_fixtures.py  fetch_bloomberg_avature_searchjobsdata.py  fetch_convex_job_by_id.py  fetch_spidercloud_fixtures.py  fetch_uber_careers_fixtures.py  generate_site_schedule_json.py  inspect_netflix_queue.py  inspect_site_activity.py  inspect_site_queue.py  inspect_spidercloud_chunks.py  measure_spidercloud_batch.py  run_spidercloud_execution.py  test_job_extract_spidercloud_api.py  wipe_bloomberg_convex.py  (+5 more)
(+537 files in other folders)
